# ExpertSystemLO21

./: Algorithmes.md  README.md
SystemExpert/: CMakeLists.txt  InferenceF.c  InferenceF.h  bonne combine a faire .txt  main.c
SystemExpert/BaseConnaissanceF/: BCF.c  BCF.h
SystemExpert/BaseFaitF/: BaseFait.c  BaseFait.h
SystemExpert/Inference/: InferenceF.c  InferenceF.h
SystemExpert/JeuF/: JeuFonction.c  JeuFonction.h
SystemExpert/RegleF/: RPremisse.c  RPremisse.h
SystemExpert/basefichier/: baseCO.txt  baseFait.txt  couleur.txt  emotions.txt  ingredientplat.txt  sport.txt  ville.txt
projet_SDL/: Algorithmes.md  CMakeLists.txt  InitEssai.c  InitEssai.h  baseCo.c  baseCo.h  baseFait.c  baseFait.h  inference.c  inference.h  interface.c  interface.h  main.c  regle.c  regle.h  template SDL.c  template SDL.h
projet_SDL/basefichier/: baseCO.txt  ingredientplat.txt  meteo.txt  musique.txt  problemesante.txt  sport.txt
